# drishti-upload

./: .travis.yml  CMakeLists.txt  README.md  README.rst  appveyor.yml  config.cmake  init.cmake  minimal.cmake
cmake/Modules/: drishti_set_hunter_gate.cmake  drishti_set_opencv_cmake_args_android.cmake  drishti_set_opencv_cmake_args_ios.cmake  drishti_set_opencv_cmake_args_nix.cmake  drishti_set_opencv_cmake_args_osx.cmake  drishti_set_opencv_cmake_args_windows.cmake
